--- a/package.json
+++ b/package.json
@@ -9,18 +9,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/genai": "^1.34.0",
+    "@react-three/drei": "9.114.0",
+    "@react-three/fiber": "8.17.10",
+    "@vercel/analytics": "^1.6.1",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.23.26",
+    "html2canvas": "^1.4.1",
+    "lucide-react": "^0.562.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "@google/genai": "^1.34.0",
-    "framer-motion": "^12.23.26",
-    "lucide-react": "^0.562.0",
     "recharts": "^3.6.0",
-    "html2canvas": "^1.4.1",
-    "three": "0.170.0",
-    "@react-three/fiber": "8.17.10",
-    "@react-three/drei": "9.114.0",
     "tailwind-merge": "^3.4.0",
-    "clsx": "^2.1.1"
+    "three": "0.170.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
